# ToolboxPluginTemplate

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: gwtoolboxpp.cmake
src/: MyToolboxPlugin.cpp  MyToolboxPlugin.h
